--- a/main_app/templates/main_app/viewMarks.html
+++ b/main_app/templates/main_app/viewMarks.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Student Management</title>
+  <title>EduVault Chain</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->  
@@ -28,7 +28,7 @@
 <body>
    <nav class="navbar navbar-expand-lg navbar-dark navbar-inverse" style="background-color: #fd7e14; font-size: 20px">
           <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'base' %}" style=" font-size: 30px">Student Managment System </a>
+          <a class="navbar-brand" href="{% url 'base' %}" style=" font-size: 30px">EduVault Chain</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -68,7 +68,7 @@
       <div class="wrap-table100">
         <div class="table100 ver2 m-b-110">
           <table d-vertable="ver2">
-             <h1 style="text-align: center; margin-bottom: 30px">STUDENT'S IMMUTABLE RECORDS</h1>
+             <h1 style="text-align: center; margin-bottom: 30px">STUDENTS' ACADEMIC SCORES</h1>
             <thead>
               <tr class="row100 head">
                 <th class="column100 column1" d-column="column1">Name</th>
