--- a/main_app/templates/main_app/base_index.html
+++ b/main_app/templates/main_app/base_index.html
@@ -25,12 +25,12 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <title>Student Managment System</title>
+    <title>EduVault Chain</title>
   </head>
   <body >
        <nav class="navbar navbar-expand-lg navbar-dark navbar-inverse" style="background-color: #fd7e14; font-size: 20px">
           <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'base' %}" style=" font-size: 30px">Student Managment System </a>
+          <a class="navbar-brand" href="{% url 'base' %}" style=" font-size: 30px">EduVault Chain</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
