--- a/main_app/templates/main_app/students.html
+++ b/main_app/templates/main_app/students.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Student Management</title>
+  <title>EduVault Chain</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->  
@@ -28,7 +28,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark navbar-inverse" style="background-color: #fd7e14; font-size: 20px">
           <div class="container-fluid">
-          <a class="navbar-brand" href="{% url 'base' %}" style=" font-size: 30px">Student Managment System </a>
+          <a class="navbar-brand" href="{% url 'base' %}" style=" font-size: 30px">EduVault Chain</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -41,17 +41,15 @@
               <li class="nav-item active">
                 <a class="nav-link" href="{% url 'students' %}">Check Student Records<span class="sr-only">(current)</span></a>
               </li>
-              <li class="nav-item dropdown">
-                <a style="font-weight: bold;" class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" >
-                  More
-                </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="{% url 'addStudent' %}">Add A New Student</a>
-                  <a class="dropdown-item" href="{% url 'viewMarks' %}">Check Student Scores</a>
-                  <div class="dropdown-divider"></div>
-                  <a class="dropdown-item" href="{% url 'modify' %}">Update Student's Records</a>
-                </div>
-              </li>
+              <li class="nav-item dropdown active">
+              <p class="nav-link dropdown-toggle" href="blog.html" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  For Admin
+              </p>
+              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <a class="dropdown-item" href="{% url 'transferAdmin' %}">Change Admin</a>
+                  <a class="dropdown-item" href="{% url 'modify' %}">Modify Data</a>
+              </div>
+                                </li>
             <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
       </li>
@@ -67,7 +65,7 @@
       <div class="wrap-table100">
         <div class="table100 ver2 m-b-110">
           <table data-vertable="ver2">
-             <h1 style="text-align: center; margin-bottom: 30px">STUDENT'S IMMUTABLE RECORDS</h1>
+             <h1 style="text-align: center; margin-bottom: 30px">STUDENTS' IMMUTABLE RECORDS</h1>
             <thead>
               <tr class="row100 head">
                 <th class="column100 column1" data-column="column1">Name</th>
